corrected smaller-images class

--- a/slides/style/style.css
+++ b/slides/style/style.css
@@ -71,8 +71,8 @@ h3 {
 }
 
 .smaller-images img {
-    width: 220px;
-    height: 220px;
+    width: 43%;
+    height: 43%;
 }
 
 .extra-images img {
